--- a/index.html
+++ b/index.html
@@ -2312,30 +2312,36 @@
         return (
             <div className="round-start-overlay">
               <div className="round-start-content">
-                <RTLLogo size="md" style={{marginBottom:30}} />
+                <RTLLogo size="md" style={{marginBottom:40}} />
 
-                <h2 style={{fontSize:72, fontWeight:900, color:'var(--rtl-orange)', margin:'0 0 20px 0', textTransform:'uppercase', letterSpacing:4}}>
+                <h2 style={{fontSize:72, fontWeight:900, color:'var(--rtl-orange)', margin:'0 0 40px 0', textTransform:'uppercase', letterSpacing:6}}>
                   RUNDE {meta.round}
                 </h2>
 
-                <div style={{padding:'30px 50px', border:'4px solid var(--rtl-orange)', marginBottom:30}}>
-                  <div className="points-label">Kategorie</div>
-                  <div style={{fontSize:'2.5rem', fontWeight:900, color:'var(--rtl-orange)', letterSpacing:2}}>
+                <div style={{padding:'40px 50px', border:'4px solid var(--rtl-orange)', marginBottom:40, textAlign:'center'}}>
+                  <div style={{fontSize:'1.2rem', color:'var(--muted)', textTransform:'uppercase', letterSpacing:2, fontWeight:700, marginBottom:15}}>
+                    Kategorie
+                  </div>
+                  <div style={{fontSize:'3.5rem', fontWeight:900, color:'var(--rtl-orange)', letterSpacing:3}}>
                     {meta.currentCategory || 'Allgemein'}
                   </div>
                 </div>
 
-                <div style={{marginBottom:30}}>
-                  <div className="points-label">Punkte pro Antwort</div>
-                  <div className="points-info">{ROUND_POINTS[meta.round || 1]}</div>
+                <div style={{marginBottom:35, textAlign:'center', padding:'30px', background:'rgba(255,255,255,0.05)', border:'2px solid rgba(255,255,255,0.2)'}}>
+                  <div style={{fontSize:'1rem', color:'var(--muted)', textTransform:'uppercase', letterSpacing:2, marginBottom:12}}>
+                    Punkte pro Antwort
+                  </div>
+                  <div style={{fontSize:'4rem', fontWeight:900, color:'white', lineHeight:1}}>{ROUND_POINTS[meta.round || 1]}</div>
                 </div>
 
-                <div style={{marginBottom:30}}>
-                  <div className="points-label">Fragen</div>
-                  <div className="points-info">{QUESTIONS_PER_ROUND}</div>
+                <div style={{marginBottom:35, textAlign:'center', padding:'30px', background:'rgba(255,255,255,0.05)', border:'2px solid rgba(255,255,255,0.2)'}}>
+                  <div style={{fontSize:'1rem', color:'var(--muted)', textTransform:'uppercase', letterSpacing:2, marginBottom:12}}>
+                    Fragen
+                  </div>
+                  <div style={{fontSize:'4rem', fontWeight:900, color:'white', lineHeight:1}}>{QUESTIONS_PER_ROUND}</div>
                 </div>
 
-                <div style={{fontSize: 16, color: 'var(--muted)', marginTop:40, padding:'15px', background:'rgba(255,255,255,0.05)', border:'1px solid rgba(255,255,255,0.1)'}}>
+                <div style={{fontSize: 18, color: 'var(--muted)', marginTop:50, padding:'18px', background:'rgba(255,255,255,0.05)', border:'1px solid rgba(255,255,255,0.1)'}}>
                   Warte auf den Host...
                 </div>
 
@@ -2388,7 +2394,7 @@
        const itemSlots = player.itemSlots || [];
        
        return (
-         <div className="min-h-screen p-4" style={{overflowY:'auto', position:'relative'}}>
+         <div className="min-h-screen p-4" style={{display:'flex', alignItems:'center', justifyContent:'center', position:'relative'}}>
            {isFrozen && (
               <div className="frozen-overlay">
                 EINGEFROREN {freezeTimeLeft}s
@@ -2403,7 +2409,7 @@
              </div>
            )}
 
-           <div className="card" style={{display:'flex', flexDirection:'column', width:'97%', height:'92vh', margin:'0 auto', maxWidth:'100%', boxSizing:'border-box'}}>
+           <div className="card" style={{display:'flex', flexDirection:'column', width:'97%', height:'92vh', maxWidth:'100%', boxSizing:'border-box'}}>
              {/* Header */}
              <div style={{display:'flex', justifyContent:'space-between', alignItems:'center', marginBottom:20, flexShrink:0}}>
                  <div style={{display:'flex', alignItems:'center', gap:8}}>
@@ -2957,4 +2963,3 @@
   </script>
 </body>
 </html>
-
