--- a/index.html
+++ b/index.html
@@ -2310,38 +2310,38 @@
     // NEW: Round Start Screen for Players
     if(meta.phase === 'roundStart') {
         return (
-            <div className="round-start-overlay">
-              <div className="round-start-content">
-                <RTLLogo size="md" style={{marginBottom:40}} />
+            <div className="min-h-screen p-4" style={{display:'flex', alignItems:'center', justifyContent:'center'}}>
+              <div className="card" style={{width:'97%', maxWidth:'100%', textAlign:'center', padding:'20px'}}>
+                <img src="Logo.png" alt="Logo" style={{height:32, width:'auto', margin:'0 auto 20px'}} />
 
-                <h2 style={{fontSize:72, fontWeight:900, color:'var(--rtl-orange)', margin:'0 0 40px 0', textTransform:'uppercase', letterSpacing:6}}>
+                <h2 style={{fontSize:36, fontWeight:900, color:'var(--rtl-orange)', margin:'0 0 25px 0', textTransform:'uppercase', letterSpacing:3}}>
                   RUNDE {meta.round}
                 </h2>
 
-                <div style={{padding:'40px 50px', border:'4px solid var(--rtl-orange)', marginBottom:40, textAlign:'center'}}>
-                  <div style={{fontSize:'1.2rem', color:'var(--muted)', textTransform:'uppercase', letterSpacing:2, fontWeight:700, marginBottom:15}}>
+                <div style={{padding:'20px 25px', border:'3px solid var(--rtl-orange)', marginBottom:20, textAlign:'center'}}>
+                  <div style={{fontSize:14, color:'var(--muted)', textTransform:'uppercase', letterSpacing:1, fontWeight:700, marginBottom:8}}>
                     Kategorie
                   </div>
-                  <div style={{fontSize:'3.5rem', fontWeight:900, color:'var(--rtl-orange)', letterSpacing:3}}>
+                  <div style={{fontSize:26, fontWeight:900, color:'var(--rtl-orange)', letterSpacing:2, lineHeight:1.2}}>
                     {meta.currentCategory || 'Allgemein'}
                   </div>
                 </div>
 
-                <div style={{marginBottom:35, textAlign:'center', padding:'30px', background:'rgba(255,255,255,0.05)', border:'2px solid rgba(255,255,255,0.2)'}}>
-                  <div style={{fontSize:'1rem', color:'var(--muted)', textTransform:'uppercase', letterSpacing:2, marginBottom:12}}>
+                <div style={{marginBottom:15, textAlign:'center', padding:'18px', background:'rgba(255,255,255,0.05)', border:'2px solid rgba(255,255,255,0.2)'}}>
+                  <div style={{fontSize:13, color:'var(--muted)', textTransform:'uppercase', letterSpacing:1, marginBottom:8}}>
                     Punkte pro Antwort
                   </div>
-                  <div style={{fontSize:'4rem', fontWeight:900, color:'white', lineHeight:1}}>{ROUND_POINTS[meta.round || 1]}</div>
+                  <div style={{fontSize:32, fontWeight:900, color:'white', lineHeight:1}}>{ROUND_POINTS[meta.round || 1]}</div>
                 </div>
 
-                <div style={{marginBottom:35, textAlign:'center', padding:'30px', background:'rgba(255,255,255,0.05)', border:'2px solid rgba(255,255,255,0.2)'}}>
-                  <div style={{fontSize:'1rem', color:'var(--muted)', textTransform:'uppercase', letterSpacing:2, marginBottom:12}}>
+                <div style={{marginBottom:20, textAlign:'center', padding:'18px', background:'rgba(255,255,255,0.05)', border:'2px solid rgba(255,255,255,0.2)'}}>
+                  <div style={{fontSize:13, color:'var(--muted)', textTransform:'uppercase', letterSpacing:1, marginBottom:8}}>
                     Fragen
                   </div>
-                  <div style={{fontSize:'4rem', fontWeight:900, color:'white', lineHeight:1}}>{QUESTIONS_PER_ROUND}</div>
+                  <div style={{fontSize:32, fontWeight:900, color:'white', lineHeight:1}}>{QUESTIONS_PER_ROUND}</div>
                 </div>
 
-                <div style={{fontSize: 18, color: 'var(--muted)', marginTop:50, padding:'18px', background:'rgba(255,255,255,0.05)', border:'1px solid rgba(255,255,255,0.1)'}}>
+                <div style={{fontSize:14, color:'var(--muted)', marginTop:25, padding:'12px', background:'rgba(255,255,255,0.05)', border:'1px solid rgba(255,255,255,0.1)'}}>
                   Warte auf den Host...
                 </div>
 
@@ -2352,7 +2352,7 @@
                       document.documentElement.requestFullscreen();
                     }
                   }}
-                  style={{marginTop:20, fontSize:14, padding:'10px 20px', background:'rgba(255,255,255,0.1)'}}
+                  style={{marginTop:15, fontSize:13, padding:'10px 18px', background:'rgba(255,255,255,0.1)'}}
                 >
                   📱 Vollbild
                 </button>
