--- a/index.html
+++ b/index.html
@@ -1378,7 +1378,7 @@
                 </div>
 
                 <div style={{textAlign:'center', padding:'20px', background:'rgba(255,255,255,0.05)', border:'1px solid rgba(255,255,255,0.1)', marginTop:30}}>
-                    <div style={{fontSize:'1.2rem', color:'var(--muted)'}}>📱 Scanne den QR-Code oder gehe zu</div>
+                    <div style={{fontSize:'1.2rem', color:'var(--muted)'}}>Scanne den QR-Code oder gehe zu</div>
                     <div style={{fontSize:'2rem', fontWeight:700, color:'var(--rtl-orange)', marginTop:5}}>rtl-quiz.web.app</div>
                 </div>
              </div>
@@ -2413,7 +2413,7 @@
                   }}
                   style={{marginTop:15, fontSize:13, padding:'10px 18px', background:'rgba(255,255,255,0.1)'}}
                 >
-                  📱 Vollbild
+                  Vollbild
                 </button>
               </div>
             </div>
@@ -2824,7 +2824,7 @@
             }}
             style={{fontSize:14, padding:'10px 20px', background:'rgba(255,255,255,0.1)'}}
           >
-            📱 Vollbild
+            Vollbild
           </button>
         </div>
       </div>
@@ -3037,5 +3037,6 @@
   </script>
 </body>
 </html>
+
 
 
